--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A lightning fast starter for autonomous AI agent development",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only -r dotenv/config src/index.ts",
+    "dev": "tsx --no-warnings -r dotenv/config index.ts",
     "build": "tsc",
     "start": "node -r dotenv/config dist/index.js",
     "lint": "eslint . --ext .ts",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@openserv-labs/sdk": "^1.1.0",
     "dotenv": "^16.4.5",
+    "lighthouse": "^12.3.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -32,7 +33,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.3.3"
-  }
+  },
+  "type": "module"
 }
